@@ -5,9 +5,14 @@ import com.distribuidoras.inventario.domain.model.ProductoPedido;
 import com.distribuidoras.inventario.domain.model.enums.EstadoPedido;
 import com.distribuidoras.inventario.domain.repository.PedidoRepository;
 import com.distribuidoras.inventario.domain.repository.ProductoPedidoRepository;
+import com.distribuidoras.inventario.domain.repository.ProductoRepository;
+import com.distribuidoras.inventario.domain.repository.LoteComprometidoRepository;
+import com.distribuidoras.inventario.domain.model.Producto;
 import com.distribuidoras.inventario.infrastructure.web.dto.PaginacionDTO;
 import com.distribuidoras.inventario.infrastructure.web.dto.PedidoResumenDTO;
 import com.distribuidoras.inventario.infrastructure.web.dto.PedidosListResponseDTO;
+import com.distribuidoras.inventario.infrastructure.web.dto.LineaResumenDTO;
+import com.distribuidoras.inventario.infrastructure.web.dto.LoteResumenDTO;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
@@ -17,120 +22,144 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import com.distribuidoras.inventario.domain.model.Cliente;
 
 /**
  * Use Case: Consultar Lista de Pedidos con filtros.
  * Spec 10: Listar Pedidos Comprometidos
- * 
- * FR-063: Mostrar pedidos comprometidos
- * FR-064: Mostrar número, cliente, fecha, productos, lotes
- * FR-065: Ordenar por fecha creación ASC (FIFO)
- * FR-066: Filtrar por cliente, fecha
  */
 @Service
 public class ConsultarListaPedidosUseCase {
 
-    private static final Logger log = LoggerFactory.getLogger(ConsultarListaPedidosUseCase.class);
+        private static final Logger log = LoggerFactory.getLogger(ConsultarListaPedidosUseCase.class);
 
-    private final PedidoRepository pedidoRepository;
-    private final ProductoPedidoRepository productoPedidoRepository;
+        private final PedidoRepository pedidoRepository;
+        private final ProductoPedidoRepository productoPedidoRepository;
+        private final ProductoRepository productoRepository;
+        private final LoteComprometidoRepository loteComprometidoRepository;
+        private final ConsultarClienteUseCase consultarClienteUseCase;
 
-    public ConsultarListaPedidosUseCase(PedidoRepository pedidoRepository,
-                                         ProductoPedidoRepository productoPedidoRepository) {
-        this.pedidoRepository = pedidoRepository;
-        this.productoPedidoRepository = productoPedidoRepository;
-    }
-
-    /**
-     * Filtros para consulta de pedidos.
-     */
-    public record FiltrosDTO(
-            EstadoPedido estado,
-            String clienteCc,
-            String numeroPedido,
-            LocalDate fechaDesde,
-            LocalDate fechaHasta,
-            Integer page,
-            Integer size
-    ) {
-        public FiltrosDTO {
-            if (page == null) page = 0;
-            if (size == null) size = 20;
-            size = Math.min(size, 100);
+        public ConsultarListaPedidosUseCase(PedidoRepository pedidoRepository,
+                        ProductoPedidoRepository productoPedidoRepository,
+                        ProductoRepository productoRepository,
+                        LoteComprometidoRepository loteComprometidoRepository,
+                        ConsultarClienteUseCase consultarClienteUseCase) {
+                this.pedidoRepository = pedidoRepository;
+                this.productoPedidoRepository = productoPedidoRepository;
+                this.productoRepository = productoRepository;
+                this.loteComprometidoRepository = loteComprometidoRepository;
+                this.consultarClienteUseCase = consultarClienteUseCase;
         }
-    }
 
-    /**
-     * Ejecuta la consulta con filtros y paginación.
-     */
-    @Transactional(readOnly = true)
-    public PedidosListResponseDTO ejecutar(FiltrosDTO filtros) {
-        log.info("Consultando lista de pedidos con filtros: estado={}, cliente={}, numero={}",
-                filtros.estado(), filtros.clienteCc(), filtros.numeroPedido());
+        public record FiltrosDTO(
+                        EstadoPedido estado,
+                        String clienteCc,
+                        String numeroPedido,
+                        LocalDate fechaDesde,
+                        LocalDate fechaHasta,
+                        Integer page,
+                        Integer size) {
+                public FiltrosDTO {
+                        if (page == null)
+                                page = 0;
+                        if (size == null)
+                                size = 20;
+                        size = Math.min(size, 100);
+                }
+        }
 
-        PageRequest pageable = PageRequest.of(filtros.page(), filtros.size());
+        @Transactional(readOnly = true)
+        public PedidosListResponseDTO ejecutar(FiltrosDTO filtros) {
+                PageRequest pageable = PageRequest.of(filtros.page(), filtros.size());
 
-        Page<Pedido> page = pedidoRepository.findByFilters(
-                filtros.estado(),
-                filtros.clienteCc(),
-                filtros.numeroPedido(),
-                filtros.fechaDesde(),
-                filtros.fechaHasta(),
-                pageable
-        );
+                Page<Pedido> page = pedidoRepository.findByFilters(
+                                filtros.estado(),
+                                filtros.clienteCc(),
+                                filtros.numeroPedido(),
+                                filtros.fechaDesde(),
+                                filtros.fechaHasta(),
+                                pageable);
 
-        // Transformar a DTOs
-        List<PedidoResumenDTO> pedidos = page.getContent().stream()
-                .map(this::toPedidoResumenDTO)
-                .toList();
+                List<PedidoResumenDTO> pedidos = page.getContent().stream()
+                                .map(this::toPedidoResumenDTO)
+                                .collect(Collectors.toList());
 
-        PaginacionDTO paginacion = PaginacionDTO.builder()
-                .totalElements(page.getTotalElements())
-                .totalPages(page.getTotalPages())
-                .currentPage(page.getNumber())
-                .pageSize(page.getSize())
-                .build();
+                PaginacionDTO paginacion = PaginacionDTO.builder()
+                                .totalElements(page.getTotalElements())
+                                .totalPages(page.getTotalPages())
+                                .currentPage(page.getNumber())
+                                .pageSize(page.getSize())
+                                .build();
 
-        log.info("Lista de pedidos consultada: {} pedidos de {} totales", 
-                pedidos.size(), page.getTotalElements());
+                return PedidosListResponseDTO.builder()
+                                .pedidos(pedidos)
+                                .paginacion(paginacion)
+                                .build();
+        }
 
-        return PedidosListResponseDTO.builder()
-                .pedidos(pedidos)
-                .paginacion(paginacion)
-                .build();
-    }
+        public List<PedidoResumenDTO> listarPedidosComprometidos() {
+                return pedidoRepository.findByEstadoOrderByFechaCreacionAsc(EstadoPedido.COMPROMETIDO).stream()
+                                .map(this::toPedidoResumenDTO)
+                                .collect(Collectors.toList());
+        }
 
-    /**
-     * Obtiene pedidos comprometidos ordenados por fecha ASC (FIFO).
-     * Spec 10 - FR-065
-     */
-    public List<PedidoResumenDTO> listarPedidosComprometidos() {
-        log.info("Listando pedidos comprometidos (FIFO)");
-        
-        return pedidoRepository.findByEstadoOrderByFechaCreacionAsc(EstadoPedido.COMPROMETIDO).stream()
-                .map(this::toPedidoResumenDTO)
-                .toList();
-    }
+        private PedidoResumenDTO toPedidoResumenDTO(Pedido pedido) {
+                List<ProductoPedido> lineas = productoPedidoRepository.findByPedidoId(pedido.getPedidoId());
 
-    /**
-     * Transforma Pedido a PedidoResumenDTO.
-     */
-    private PedidoResumenDTO toPedidoResumenDTO(Pedido pedido) {
-        List<ProductoPedido> lineas = productoPedidoRepository.findByPedidoId(pedido.getPedidoId());
-        
-        Integer totalUnidades = lineas.stream()
-                .mapToInt(ProductoPedido::getCantidadSolicitada)
-                .sum();
+                Integer totalUnidades = lineas.stream()
+                                .mapToInt(ProductoPedido::getCantidadSolicitada)
+                                .sum();
 
-        return PedidoResumenDTO.builder()
-                .pedidoId(pedido.getPedidoId())
-                .numeroPedido(pedido.getNumeroPedido())
-                .clienteCc(pedido.getClienteCc())
-                .clienteNombre("Cliente")  // Se podría consultar módulo usuarios
-                .fechaCreacion(pedido.getFechaCreacion())
-                .estado(pedido.getEstado().name())
-                .totalLineas(lineas.size())
-                .totalUnidades(totalUnidades)
-                .build();
-    }
+                List<LineaResumenDTO> lineasResumen = lineas.stream()
+                                .map(this::toLineaResumenDTO)
+                                .collect(Collectors.toList());
+
+                String clienteNombre = "Cliente";
+                String clienteDireccion = null;
+                try {
+                        Cliente cliente = consultarClienteUseCase.ejecutar(pedido.getClienteCc());
+                        if (cliente != null) {
+                                clienteNombre = cliente.getNombre();
+                                clienteDireccion = cliente.getDireccion();
+                        }
+                } catch (Exception e) {
+                        log.warn("No se pudo obtener nombre del cliente {}: {}", pedido.getClienteCc(), e.getMessage());
+                }
+
+                return PedidoResumenDTO.builder()
+                                .pedidoId(pedido.getPedidoId())
+                                .numeroPedido(pedido.getNumeroPedido())
+                                .clienteCc(pedido.getClienteCc())
+                                .clienteNombre(clienteNombre)
+                                .direccionEntrega(clienteDireccion)
+                                .fechaCreacion(pedido.getFechaCreacion())
+                                .estado(pedido.getEstado().name())
+                                .totalLineas(lineas.size())
+                                .totalUnidades(totalUnidades)
+                                .lineas(lineasResumen)
+                                .build();
+        }
+
+        private LineaResumenDTO toLineaResumenDTO(ProductoPedido linea) {
+                Producto producto = productoRepository.findById(linea.getSkuId()).orElse(null);
+                String marca = producto != null ? producto.getMarca() : "Desconocido";
+                String presentacion = producto != null ? producto.getPresentacion() : "Desconocido";
+
+                List<LoteResumenDTO> lotes = List.of();
+                if (linea.getCantidadConfirmada() > 0) {
+                        lotes = loteComprometidoRepository.findByProductoPedidoId(linea.getProductoPedidoId()).stream()
+                                        .map(lc -> new LoteResumenDTO(lc.getCodigoLote(), lc.getCantidadComprometida()))
+                                        .collect(Collectors.toList());
+                }
+
+                return new LineaResumenDTO(
+                                linea.getSkuId(),
+                                marca,
+                                presentacion,
+                                linea.getCantidadSolicitada(),
+                                linea.getCantidadConfirmada(),
+                                lotes);
+        }
 }
